edit 'stdout_lines' in last variable

--- a/cisco_ios_config.yml
+++ b/cisco_ios_config.yml
@@ -21,4 +21,5 @@
       register:
         ios_command_output
     - debug:
-        var: ios_command_output
+        var: ios_command_output.stdout_lines
+        
