--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,12 @@
 ---
 - name: config from file
   gather_facts: false
-  hosts: r1 
+  hosts: cisco 
+
   tasks:
     - name: config R1
       ios_config:
         src: /root/router/config1.txt
+      register: output
+    
+    - debug: var=output.stdout_lines
