--- a/config_banner.yml
+++ b/config_banner.yml
@@ -1,16 +1,16 @@
 ---
-- name: Configre Banner MOTD and Login
+- name: "Playbook: Configure Banner MOTD and Login" 
   gather_facts: false
   hosts: all
   tasks:
-    - name: config Banner MOTD
+    - name: "T1: Configure Banner MOTD"
       ios_banner:
         banner: motd 
         text: |
           Wellcome to the {{ inventory_hostname }}
         state: present
 
-    - name: config Banner Login
+    - name: "T1: Configure Banner Login"
       ios_banner:
         banner: login 
         text: |
