--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 inventory=./hosts
-host_key_checking=False
-deprecation_warnings=False
+host_key_checking=false
+deprecation_warnings=false
 timeout=10
