update typo in ssh_config

--- a/configuration/ssh_config.cfg
+++ b/configuration/ssh_config.cfg
@@ -1,6 +1,5 @@
 # This is an example of how to config SSH on Cisco switch
 
-enable
 conf t
 
 username admin secret cisco
@@ -8,7 +7,7 @@ username admin priv 15
 
 line vty 0 4
  login local
- transport input ll
+ transport input all
 
 ip domain-name test.com
 crypto key gen rsa
