--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,4 @@
 [defaults]
-inventory=./hosts
-host_key_checking=false
-deprecation_warnings=false
+inventory= ./hosts
+host_key_checking = false
+deprecation_warnings = false
