--- a/playbooks/ospf_core.yml
+++ b/playbooks/ospf_core.yml
@@ -1,19 +1,11 @@
 ---
 - name: Manage GNS3 devices
-  hosts: R1, R2, S1, S2
+  hosts: core 
   gather_facts: false
-  connection: local
-
-  vars:
-    cli:
-      username: david
-      password: cisco
 
   tasks:
     - name: enable ospf
       ios_config:
-        provider: "{{ cli }}"
-        authorize: yes
         parents: router ospf 1
         lines:
           - network 0.0.0.0 255.255.255.255 area 0
