--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,5 @@
 [defaults]
-inventory= ./hosts
+inventory = ./hosts
 host_key_checking = false
 deprecation_warnings = false
+interpreter_python = auto
