--- a/configuration/ssh_switch.cfg
+++ b/configuration/ssh_switch.cfg
@@ -1,19 +1,16 @@
 # This is an example of how to configure SSH on a Cisco switch:
 
-enable
 conf t
-int vlan 1
-no shut
-int g0/0
-no shut
-username david pass cisco
-username david priv 15
+
+username admin pass cisco
+username admin priv 15
 line vty 0 4
 login local
 transport input all
-ip domain-name cciepython.com
+
+ip domain-name test.com
 crypto key generate rsa
-1024
+2048
 
 int vlan 1
 no shut
