update and rename

--- a/configuration/ssh_router.cfg
+++ b/configuration/ssh_router.cfg
@@ -11,7 +11,11 @@ line vty 0 4
 
 ip domain-name test.com
 crypto key gen rsa
-1024
+2048
+
+int gig0/0
+ no shut
+ ip address 10.1.1.1 255.255.255.0
 
 end
 wr
