--- a/configuration/ssh_switch.cfg
+++ b/configuration/ssh_switch.cfg
@@ -1,20 +1,24 @@
 # This is an example of how to configure SSH on a Cisco switch:
 
 conf t
-
-username admin pass cisco
+!
+enable secret cisco
+!
+username admin secret cisco
+!
 username admin priv 15
+!
 line vty 0 4
 login local
 transport input all
-
+!
 ip domain-name test.com
 crypto key generate rsa
 2048
-
+!
 int vlan 1
 no shut
 ip address 192.168.122.72 255.255.255.0
-
+!
 end
 wr
