--- a/configuration/ssh_router.cfg
+++ b/configuration/ssh_router.cfg
@@ -1,21 +1,23 @@
 # This is an example of how to config SSH on router
 
 conf t
-
+!
+enable secret cisco
+!
 username admin secret cisco
 username admin priv 15
-
+!
 line vty 0 4
  login local
  transport input all
-
+!
 ip domain-name test.com
 crypto key gen rsa
 2048
-
+!
 int gig0/0
  no shut
  ip address 10.1.1.1 255.255.255.0
-
+!
 end
 wr
