--- a/playbooks/ios_command_run_config.yml
+++ b/playbooks/ios_command_run_config.yml
@@ -1,13 +1,14 @@
 ---
 - name: IOS Command to save running config
+  gather_facts: false
   hosts: network
   tasks:
     - name: show run
       ios_command:
         commands: show run
-      register: sh_run_output
+      register: show_run_output
 
     - name: save show run into text file
       copy:
-        content: "{{ sh_run_output }}"
-        dest: "./documentation/network_run_config.txt"
+        content={{ show_run_output.stdout_lines | to_nice_yaml }}
+        dest=./documentation/network/{{ inventory_hostname }}_run_config.txt
