--- a/playbooks/config_hostname.yml
+++ b/playbooks/config_hostname.yml
@@ -1,29 +1,20 @@
 ---
 
-- name: Network Getting Started First Playbook Extended
-  connection: network_cli
+- name: config hostname and save config 
   gather_facts: false
   hosts: all
   tasks:
 
-    - name: Get config for IOS devices
-      ios_facts:
-        gather_subset: all
-
-    - name: Display the config
-      debug:
-        msg: "The hostname is {{ ansible_net_hostname }} and the OS is {{ ansible_net_version }}"
-
-    - name: Update the hostname
+    - name: config hostname 
       ios_config:
-        backup: yes
         lines:
-          - hostname Router-1
-
-    - name: Get changed config for IOS devices
-      ios_facts:
-        gather_subset: all
-
-    - name: Display the changed config
-      debug:
-        msg: "The hostname is {{ ansible_net_hostname }} and the OS is {{ ansible_net_version }}"
+          - hostname "{{ inventory_hostname }}"
+      notify: "save config"
+      
+  handlers:
+    - name: save config
+      ios_command:
+        commands: "write mem"
+        timeout: 20
+      when: not ansible_check_mode   
+   
