--- a/playbooks/standard_loop.yml
+++ b/playbooks/standard_loop.yml
@@ -1,7 +1,7 @@
 ---
 - name: "Playbook: Configure interfaces" 
   gather_facts: false
-  hosts: switch
+  hosts: CORE01
   tasks:
 
     - name: configure interface
