added switch basic config tamplate

--- a/configuration/sw_01.cfg
+++ b/configuration/sw_01.cfg
@@ -1,10 +1,12 @@
-# This is an example of how to configure SSH on a Cisco switch:
+# Configure SSH on SW-1:
 
 conf t
 !
+hostname SW-1
+!
 enable secret cisco
 !
-username admin secret cisco
+username admin pass cisco
 !
 username admin priv 15
 !
@@ -18,7 +20,7 @@ crypto key generate rsa
 !
 int vlan 1
 no shut
-ip address 192.168.122.72 255.255.255.0
+ip address 10.1.1.3 255.255.255.0
 !
 end
 wr
