add config files to configuration folder

--- a/configuration/ssh_router.cfg
+++ b/configuration/ssh_router.cfg
@@ -2,9 +2,11 @@
 
 conf t
 !
+hostname
+!
 enable secret cisco
 !
-username admin secret cisco
+username admin pass cisco
 username admin priv 15
 !
 line vty 0 4
