--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,6 @@
 [defaults]
-inventory = ./hosts
-host_key_checking = false
-deprecation_warnings = false
-interpreter_python = auto
+inventory=./hosts
+gathering=explicit
+host_key_checking=false
+deprecation_warnings=false
+interpreter_python=auto
