--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
-inventory=./inventory.cfg
+inventory=./inventory.yaml
 gathering=explicit
 host_key_checking=false
 deprecation_warnings=false
