update ssh config

--- a/configuration/core-sw.cfg
+++ b/configuration/core-sw.cfg
@@ -6,14 +6,15 @@ hostname core-sw
 !
 enable secret cisco
 !
-username admin pri 15 password cisco
+username admin pri 15 secret cisco
 !
 line vty 0 4
 login local
-transport input all
+transport input ssh
 !
-ip domain-name test.com
-crypto key generate rsa module 1024
+ip ssh version 2
+ip domain-name cisco.com
+crypto key generate rsa modul 1024
 !
 int vlan 1
 no shut
